2013-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* aclocal.m4: [Bug 3608581]: Extended check for executable
	* configure: extension to recognize an MSYS environment as Windows
	  and requiring a ".exe" suffix. Regenerated configure.

2013-03-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/installation/modules.tcl: Added 'pt' (of modules/pt) to
	  the set of distributed applications. Note that the application
	  was moved to apps/ for this.

2013-03-01  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/validate/syntax.tcl (::sak::validate::syntax::Setup): 
	* support/devel/sak/validate/testsuites.tcl (::sak::validate::testsuites::Setup):
	  The namespace ::tcl contains parts necessary for the proper
	  operation of the interpreter, since 8.6. Do not delete anymore.

2013-02-15  Andreas Kupries  <andreask@activestate.com>

	* New module 'string'. String/text utilities, 8.5+.
	  First packages:
	  - string::token        - regex based lexing.
	  - string::token::shell - parsing basic shell command line syntax.

2013-02-08  Andreas Kupries <andreask@activestate.com>

	* apps/dtplite: Fixed missing -ibase option in direcotry
	* apps/dtplite.man: processing with -merge. Fixed sorting in
	  generated toc and indices. Plus new feature: -toc for external
	  toc to place in the output. Bumped to 1.0.4. Updated
	  documentation.

2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2013-01-28  Andreas Kupries  <andreask@activestate.com>

	* modules/fileutil: New package 'fileutil::decode'.
	* modules/zip: New module 'zip', with packages 'zipfile::encode'
	  and 'zipfile::decode'

2013-01-24  Andreas Kupries  <andreask@activestate.com>

	* New module and packages: clock (rfc2822, iso8601).
	  Tcl 8.5 only.

2013-01-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
